# Dx0

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ISSUE_BREAKDOWN.md  LICENSE  Makefile  README.md  RELEASE.md  STRATEGIC_ROADMAP.md  cli.py  configuration_audit.md  docker-compose.yml  example_results.csv  groom_migrated_issues.py  issue_grooming_commands.md  migrate_tasks_to_issues.py  pyproject.toml  requirements-dev.txt  session_backend_research.md  session_management_analysis.md  setup.cfg  tasks.yml
analysis/: cpt_data_validation.py  cpt_feature_engineering.py  cpt_pricing_data_analysis_issue_314.md  data_enhancement_strategy.md  enhanced_data_schema.json  validation_report.json
config/: README.md  development.yml  production.yml  staging.yml
data/: .gitignore  cpt_lookup.csv  embeddings.dvc  raw_cases.dvc
docs/: README.md  add_users.md  api-client-examples.md  api-reference.md  async_testing_guide.md  batch_eval.md  budget-dashboard.json  budget_manager.md  cli_tokens.md  cost_estimator_plugins.md  dataset_format.md  dependency_updates.md  drift_analysis_report.md  dvc_setup.md  evaluation_testing_guide.md  finetuning.md  getting_started.md  grafana-dashboard.json  installation.md  legal_review.md  logging.md  metrics_db.md  ml_feature_engineering_guide.md  monitoring_setup.md  openapi.json  openapi.yaml  performance-dashboard.json  performance_benchmark.md  persona_plugins.md  prometheus.yml  quickstart.md  release.md  release_notes.md  retrieval_plugins.md  security_report.md  slurm_batch_eval.sbatch  swagger-ui.html  threat_model.md  ui_feedback.md  ui_quality_assurance.md  (+2 more)
frontend/: package.json  vite.config.js
k8s/: dx0.yaml  monitoring.yaml
notebooks/: evaluation_example.ipynb  ml_feature_engineering_demo.ipynb
prompts/: case_summary_system.txt  challenger_system.txt  checklist_system.txt  cpt_lookup_system.txt  hypothesis_system.txt  judge_system.txt  optimist_system.txt  stewardship_system.txt  test_chooser_system.txt
results/: performance_baseline.csv
scripts/: benchmark_cache.py  benchmark_llm.py  benchmark_retrieval.py  collect_cases.py  deidentify_fhir.py  export_openapi.py  fhir_to_casedb.py  generate_release_notes.py  init_metrics_db.py  install_dev_deps.sh  license_check.py  measure_pooling.py  migrate_to_faiss.py  migrate_to_sqlite.py  prepare_finetune.py  retrieval_eval.py  run_benchmarks.py  run_evaluation_tests.py  slurm_batch_eval.py  start_metrics_server.py  train_domain_model.py  update_cases.py  update_cms_pricing.py
sdb/: __init__.py  actions.py  benchmarks.py  budget.py  case_database.py  config.py  cost_estimator.py  cpt_lookup.py  decision.py  ensemble.py  evaluation.py  exceptions.py  fhir_export.py  fhir_import.py  gatekeeper.py  http_utils.py  judge.py  llm_client.py  logging_config.py  metrics.py  ml_cost_estimator.py  ml_explainability.py  ml_feature_engineering.py  ml_feature_store.py  ml_preprocessing.py  ml_validation.py  orchestrator.py  panel.py  plotting.py  prompt_loader.py  protocol.py  query_schema.xsd  retrieval.py  sqlite_db.py  statistics.py  token.py
tests/: JUDGE_TESTING_GUIDE.md  conftest.py  cost_estimator_test_data.py  judge_test_data.py  retrieval_eval_cases.json  test_accessibility.py  test_case_database.py  test_case_validation.py  test_cli.py  test_collect_cases.py  test_config.py  test_config_profiles.py  test_convert_cases.py  test_cost_estimator.py  test_cost_estimator_performance.py  test_cost_estimator_validation.py  test_cpt_lookup.py  test_dark_theme.py  test_decision.py  test_e2e_ui_playwright.py  test_ensemble.py  test_evaluation.py  test_evaluation_data.py  test_evaluation_frameworks.py  test_evaluation_metrics.py  test_evaluation_performance.py  test_fhir_export.py  test_fhir_import.py  test_flake8.py  test_gatekeeper.py  test_hf_local_client.py  test_judge.py  test_judge_performance.py  test_judge_validation.py  test_llm_cache.py  test_llm_engine_async.py  test_llm_fallback.py  test_metrics.py  test_metrics_db.py  test_orchestrator.py  (+18 more)
webui/: index.html  (+3 more)
(+661 files in other folders)
